@@ -429,7 +429,7 @@ typedef struct
    unfortunately clutters up the declarations a bit, but I think it's
    worth it.  */
 
-#if __STDC__
+#ifdef __STDC__
 
 # define _RE_ARGS(args) args
 
